*** Changelog ***

= 8.0.0 - 2024-xx-xx =
* Fix - Critical error when deactivating the extension after deactivating WooCommerce.
* Fix - Add missing fee and payout information to the order details page in admin.
* Fix - Hiding "Early Access" label and "Refresh payment methods" button when UPE is disabled.
* Tweak - Orders with `trash` status are not retrieving anymore when calling `get_order_by_intent_id` function.
* Add   - Update the interface for customizing Stripe payment methods.

= 7.9.1 - 2024-01-16 =
* Fix - PHP fatal error when updating a user with saved tokens from the WP Dashboard.

= 7.9.0 - 2024-01-11 =
* Tweak - Updated supported/tested versions of WordPress and WooCommerce.

= 7.8.1 - 2023-12-28 =
* Fix - Check if a valid order of tye WC_Order is returned before calling `get_meta` function.

= 7.8.0 - 2023-12-21 =
* Fix - Resolved an issue with Stripe errors not being displayed on the checkout page for stores using custom payment method elements.
* Fix - Resolved a PHP fatal error occurring on stores that removed `WC_Email_Failed_Order` from the list of WC email classes while attempting to send the failed order email.
* Fix - Prevent incorrect totals displayed in Google Pay and Apple Pay when purchasing a virtual sychronised subscription from the product page.
* Fix - Hide the Google Pay and Apple Pay buttons on variable product pages, if the selected variation is not supported by Payment Request buttons.
* Fix - Don't require shipping when purchasing a virtual variable subscription product using Google Pay and Apple Pay.
* Fix - When using Payment Request buttons, fix $0 total for stores using a customized product page that adds the variation product ID directly into the cart.
* Fix - MultiBanco: HTML tags to print as expected on the Order Confirmation page, and "Thank you for your order" email.
* Tweak - Improve compatibility with PHP 8+.